--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,14 +1,14 @@
 [preset.0]
 
-name="Lastshift"
+name="Lastshift_win"
 platform="Windows Desktop"
-runnable=true
+runnable=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="build/Lastshift.exe"
+export_path="build/win/Lastshift.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -66,7 +66,7 @@ dotnet/embed_build_outputs=false
 
 [preset.1]
 
-name="Lastshift"
+name="Lastshift_macos"
 platform="macOS"
 runnable=true
 dedicated_server=false
@@ -74,7 +74,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="build/macos/Lastshift.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -89,7 +89,7 @@ custom_template/release=""
 debug/export_console_wrapper=1
 application/icon=""
 application/icon_interpolation=4
-application/bundle_identifier=""
+application/bundle_identifier="com.dmbsk.lastshift"
 application/signature=""
 application/app_category="Games"
 application/short_version=""
